fix sort & Create alignment with multiline filter

--- a/src/components/patternfly-wrappers/sort.scss
+++ b/src/components/patternfly-wrappers/sort.scss
@@ -1,6 +1,7 @@
 .hub-sort-wrapper {
   display: flex;
   align-items: center;
+  padding: 6px 0;
 }
 
 .asc-button {
